export const snapshot = {};

snapshot[`parseDeck() 1`] = `
{
  ok: true,
  value: {
    description: "システム英単語系の問題集",
    id: 44845749858349580,
    name: "system-english",
  },
}
`;

snapshot[`parseDeck() 2`] = `
{
  ok: true,
  value: {
    id: 44845749858349580,
    name: "system-english",
  },
}
`;

snapshot[`parseDeck() 3`] = `
{
  ok: false,
  value: {
    message: "Deck name not found.",
    name: "InvalidDeckError",
  },
}
`;
